--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly-2023-02-28
+      - name: Set macOS Deployment Target
+        run: export MACOSX_DEPLOYMENT_TARGET=11.0
+        if: contains(matrix.platform.os, 'macos')
       - name: Build
         run: cargo +nightly-2023-02-28 build --release
         env:
